fixed the spacing issue in the navbar

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -42,6 +42,7 @@
 .navSearchIcon {
     color: #444;
     cursor: pointer;
+    margin-left: 15px;
 }
 
 /* separate  center contents of the navbar */
@@ -64,4 +65,6 @@
     margin-right: 20px;
     color: #444;
     font-size: 18px;
+    font-weight: 300;
+    cursor: pointer;
 }
